--- a/src/views/pages/docs.pug
+++ b/src/views/pages/docs.pug
@@ -20,6 +20,12 @@ block content
               .docs-page__selects-item 
                 .select-wrapper 
                   .select
+                    select.select__mobile(name='cat-mob' data-select-mobile='') 
+                      option(value="" selected disabled)
+                        |Выберите категорию
+                      each item in data.selectValues.cat
+                        option(value=item)
+                          |#{item} 
                     select.select__select(data-select-placeholder='Выберите категорию' style='width: 100%' data-select-control='')
                       option(value='' disabled selected)
                       each item in data.selectValues.cat
@@ -28,6 +34,12 @@ block content
               .docs-page__selects-item 
                 .select-wrapper 
                   .select.disabled(data-select-controlled='')
+                    select.select__mobile(name='cat-mob') 
+                      option(value="" selected disabled)
+                        |Выберите бренд'
+                      each item in data.selectValues.brand
+                        option(value=item)
+                          |#{item} 
                     select.select__select(data-select-placeholder='Выберите бренд' style='width: 100%')
                       option(value='' disabled selected)
                       each item in data.selectValues.brand
