--- a/src/views/pages/equip-cat.pug
+++ b/src/views/pages/equip-cat.pug
@@ -46,7 +46,7 @@ block content
           .panel__col  
             +button 
               |Материалы для скачивания
-        .equip-page__wrapper.margin-top
+        .margin-top
           +tabs(tabs = ['Leadwell серия T', 'Leadwell серия LTC', 'Leadwell серия T/LTC'])
         .margin-top.margin-top--md 
           +model-tabs(items = ['Модели', 'Возможные опции'])
