--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -1,3 +1,5 @@
+include ./button
+
 mixin header
   .header 
     .header__inner 
@@ -75,21 +77,130 @@ mixin header
                           a.header__user-link(href="#") 
                             |#{item}
       .header__mobile 
-        .header__mobile-col
-          .header__mobile-search
-            +search-svg.header__search-svg
-        .header__mobile-col
-          a.header__cart(href="#") 
-            .header__cart-icon 
-              +cart-svg.header__cart-svg
-            .header__cart-count 
-              |5
-        .header__mobile-col
-          .header__menu
-            .header__burger
-              span.header__burger-span
-              span.header__burger-span
-              span.header__burger-span
+        .header__mobile-row
+          .header__mobile-col
+            .header__mobile-search
+              +search-svg.header__search-svg
+          .header__mobile-col
+            a.header__cart(href="#") 
+              .header__cart-icon 
+                +cart-svg.header__cart-svg
+              .header__cart-count 
+                |5
+          .header__mobile-col
+            .header__menu
+              .header__burger
+                span.header__burger-span
+                span.header__burger-span
+                span.header__burger-span
+        .mobile-menu  
+          .mobile-menu__overlay 
+          .mobile-menu__container
+            .mobile-menu__top 
+              .mobile-menu__col 
+                a.mobile-menu__button(href="#")  
+                  .mobile-menu__icon 
+                    +user-svg.mobile-menu__svg
+                  .mobile-menu__text
+                    |Личный кабинет
+              .mobile-menu__col
+                +button.button--menu
+                  |Заказать звонок
+            .mobile-menu__item.mobile-menu__item--bb(data-modal-btn='5')
+              .mobile-menu__item-text 
+                |Телефоны для связи
+              .mobile-menu__item-icon 
+                +arrow-svg.mobile-menu__item-svg
+            ul.mobile-menu__list 
+              each item, i in ['Оборудование', 'Инструмент', 'Услуги']
+                li.mobile-menu__item(data-modal-btn=i)
+                  .mobile-menu__item-text 
+                    |#{item}
+                  .mobile-menu__item-icon 
+                    +arrow-svg.mobile-menu__item-svg
+            nav.mobile-menu__nav 
+              each item in ['О нас', 'Клиентам', 'Контакты']
+                a.mobile-menu__nav-link(href="#") 
+                  |#{item}
+            .mobile-menu__modals 
+              .mobile-menu__modal(data-modal-menu='0') 
+                .mobile-menu__modal-top 
+                  .mobile-menu__modal-back(data-modal-close='0') 
+                    .mobile-menu__modal-icon 
+                      +arrow-svg.mobile-menu__modal-svg
+                    .mobile-menu__modal-text 
+                      |Оборудование
+                ul.mobile-menu__list
+                  each item, i in ['Токарные станки с ЧПУ', 'Фрезерные станки с ЧПУ', 'Вертикальные токарные и карусельные станки с ЧПУ', 'Ленточнопильные станки', 'Шлифовальные станки', 'Прессовое оборудование', 'Электроэрозионные станки', 'Универсальные станки', 'Раскроечные станки', 'Измерительное оборудование']
+                    li.mobile-menu__item(data-modal-btn='q0')
+                      .mobile-menu__item-text 
+                        |#{item}
+                      .mobile-menu__item-icon 
+                        +arrow-svg.mobile-menu__item-svg
+                .mobile-menu__modal(data-modal-menu='q0')
+                  .mobile-menu__modal-top 
+                    .mobile-menu__modal-back(data-modal-close='q0') 
+                      .mobile-menu__modal-icon 
+                        +arrow-svg.mobile-menu__modal-svg
+                      .mobile-menu__modal-text 
+                        |Токарные станки с ЧПУ
+                  ul.mobile-menu__modal-list 
+                    each item in ['С направляющими качения', 'С направляющими качения и противошпинделем', 'С направляющими качения и осью Y', 'Роботизированные с направляющими качения токарно-фрезерные с направляющими качения', 'С направляющими скольжения', 'С направляющими скольжения и осью Y', 'Трубообрабатывающие', 'Автоматы продольного точения']
+                      li.mobile-menu__modal-item
+                        a(href="#") 
+                          |#{item}
+              .mobile-menu__modal(data-modal-menu='1') 
+                .mobile-menu__modal-top 
+                  .mobile-menu__modal-back(data-modal-close='1') 
+                    .mobile-menu__modal-icon 
+                      +arrow-svg.mobile-menu__modal-svg
+                    .mobile-menu__modal-text 
+                      |Инструмент
+                ul.mobile-menu__list
+                  each item, i in ['Корпусной режущий инструмент', 'Осевой режущий инструмент', 'Вспомогательный инструмент для фрезерных станков с ЧПУ', 'Вспомогательный инструмент для токарных станков с ЧПУ', 'Приспособления', 'Аксессуары для инструмента']
+                    li.mobile-menu__item(data-modal-btn='q1')
+                      .mobile-menu__item-text 
+                        |#{item}
+                      .mobile-menu__item-icon 
+                        +arrow-svg.mobile-menu__item-svg
+                .mobile-menu__modal(data-modal-menu='q1')
+                  .mobile-menu__modal-top 
+                    .mobile-menu__modal-back(data-modal-close='q1') 
+                      .mobile-menu__modal-icon 
+                        +arrow-svg.mobile-menu__modal-svg
+                      .mobile-menu__modal-text 
+                        |Корпусной режущий инструмент
+                  ul.mobile-menu__modal-list 
+                    each item in ['Пластины для точения', 'Пластины для фрезерования', 'Державки MICRONEGA', 'Корпусные сверла', 'Токарные пластины MICRONEGA', 'Пластины для корпусных сверл', 'Державки MICROBORING', 'Токарные пластины MICROBORING', 'Токарные державки', 'Корпусные фрезы']
+                      li.mobile-menu__modal-item
+                        a(href="#") 
+                          |#{item}
+              .mobile-menu__modal(data-modal-menu='2') 
+                .mobile-menu__modal-top 
+                  .mobile-menu__modal-back(data-modal-close='2') 
+                    .mobile-menu__modal-icon 
+                      +arrow-svg.mobile-menu__modal-svg
+                    .mobile-menu__modal-text 
+                      |Услуги
+                ul.mobile-menu__modal-list 
+                  each item in ['Подбор инструмента', 'Ленточные пилы', 'Сервис', 'Инжиниринг', 'Обучение', 'Лизинг']
+                    li.mobile-menu__modal-item
+                      a(href="#") 
+                        |#{item}
+              .mobile-menu__modal(data-modal-menu='5') 
+                .mobile-menu__modal-top 
+                  .mobile-menu__modal-back(data-modal-close='5') 
+                    .mobile-menu__modal-icon 
+                      +arrow-svg.mobile-menu__modal-svg
+                    .mobile-menu__modal-text.mobile-menu__modal-text--default
+                      |Телефоны для связи
+                ul.mobile-menu__modal-list 
+                  each item in data.contacts 
+                    li.mobile-menu__modal-item
+                      a.header__link(href="tel:" + item.phone) 
+                        |#{item.phone}
+                      .header__label 
+                        |#{item.city}
     .header__modal 
       .header__modal-overlay
       .header__modal-product(data-header-modal='1')
