--- a/src/assets/styles/pages/instrument-card.scss
+++ b/src/assets/styles/pages/instrument-card.scss
@@ -115,7 +115,7 @@
     &:nth-child(2) {
       margin-left: 16px;
       @media (max-width: ($breakpoint - 1px)) {
-        margin-left: 32px;
+        margin-left: auto;
       }
     }
   }
