--- a/src/views/pages/instruments-card-1.pug
+++ b/src/views/pages/instruments-card-1.pug
@@ -31,6 +31,7 @@ block content
                       img.instruments-card__section-img(src="assets/images/instrument-slide-2.jpg", alt="")
                     .swiper-slide 
                       img.instruments-card__section-img(src="assets/images/instrument-slide-1.jpg", alt="")
+                .swiper-pagination
             .instruments-card__section-buttons
               +slider-buttons.slider-buttons--small(prev = '13' next = '14')
           .instruments-card__section-col
