--- a/src/assets/styles/modules/swiper-container.scss
+++ b/src/assets/styles/modules/swiper-container.scss
@@ -18,3 +18,19 @@
     }
   }
 }
+
+.swiper-pagination {
+  bottom: 0 !important;
+
+  &-bullet {
+
+    margin: 0 5px;
+
+    background: $color-light-gray;
+    opacity: 1;
+
+    &-active {
+      background: $color-blue;
+    }
+  }
+}
