--- a/src/views/components/modals.pug
+++ b/src/views/components/modals.pug
@@ -85,7 +85,7 @@ mixin login-modal
                       .tooltip__icon 
                         +tooltip-svg
                   .tooltip__container   
-                    |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
+                    |Цена с НДС по курсу ЦБ на 25.06.2021
           .login-modal__form.active(data-form-corp='')
             each item in ddata.corp 
               .form__item 
