--- a/src/views/components/product-card.pug
+++ b/src/views/components/product-card.pug
@@ -38,7 +38,7 @@ mixin product-card
               .tooltip__icon 
                 +tooltip-svg.tooltip__svg
           .tooltip__container   
-            |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
+            |Цена с НДС по курсу ЦБ на 25.06.2021
         .product-card__price-old
           |€ 103.55
       .product-card__bot 
