--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -63,7 +63,7 @@ block content
                               .tooltip__icon 
                                 +tooltip-svg
                           .tooltip__container   
-                            |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
+                            |Цена с НДС по курсу ЦБ на 25.06.2021
                         .cart-page__item-old 
                           |€ 103.55
                     .cart-page__item-col
