--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -60,7 +60,7 @@ block content
                         .tooltip__icon 
                           +tooltip-svg
                     .tooltip__container   
-                      |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
+                      |Цена с НДС по курсу ЦБ на 25.06.2021
                   .instruments-card__price-old 
                     |€ 20.55
                 .instruments-card__price-col
