--- a/src/views/components/accordion.pug
+++ b/src/views/components/accordion.pug
@@ -62,4 +62,4 @@ mixin accordion
                     .tooltip__icon 
                       +tooltip-svg
                 .tooltip__container   
-                  |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
+                  |Цена с НДС по курсу ЦБ на 25.06.2021
