--- a/src/views/pages/booking-2.pug
+++ b/src/views/pages/booking-2.pug
@@ -55,7 +55,7 @@ block content
                                 .tooltip__icon 
                                   +tooltip-svg
                             .tooltip__container   
-                              |Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima consectetur deserunt cumque?
+                              |Цена с НДС по курсу ЦБ на 25.06.2021
                       .cart-page__item-col
                         .cart-page__item-container
                           .cart-page__item-caption 
