--- a/src/assets/styles/modules/modals.scss
+++ b/src/assets/styles/modules/modals.scss
@@ -39,6 +39,9 @@
 
   &__text {
     @include fsl(12px, 140%);
+    @media (max-width: ($breakpoint - 1px)) {
+      @include fsl(10px, 140%);
+    }
     text-align: center;
   }
 
@@ -82,11 +85,17 @@
 }
 
 .fancybox-slide--html .fancybox-close-small {
+  --size: 30px;
+
   top: 10px;
   right: 10px;
   @media (max-width: ($breakpoint - 1px)) {
     top: 8px;
     right: 16px;
+    padding: 6px;
+
+    width: var(--size);
+    height: var(--size);
   }
 
   background: $color-darken-white;
