--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -98,7 +98,7 @@ mixin header
           .mobile-menu__container
             .mobile-menu__top 
               .mobile-menu__col 
-                a.mobile-menu__button(href="#")  
+                a.mobile-menu__button(href="#" data-fancy-button='1')  
                   .mobile-menu__icon 
                     +user-svg.mobile-menu__svg
                   .mobile-menu__text
