--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -61,7 +61,7 @@ block content
                             |€ 93.42
                             span.tooltip__span
                               .tooltip__icon 
-                                +tooltip-svg
+                                +tooltip-svg.tooltip__svg
                           .tooltip__container   
                             |Цена с НДС по курсу ЦБ на 25.06.2021
                         .cart-page__item-old 
