--- a/src/views/components/accordion.pug
+++ b/src/views/components/accordion.pug
@@ -60,6 +60,6 @@ mixin accordion
                   |€ 93.42
                   span.tooltip__span
                     .tooltip__icon 
-                      +tooltip-svg
+                      +tooltip-svg.tooltip__svg
                 .tooltip__container   
                   |Цена с НДС по курсу ЦБ на 25.06.2021
