--- a/src/views/components/counter.pug
+++ b/src/views/components/counter.pug
@@ -3,8 +3,7 @@ mixin counter
     .counter__item.counter__item--minus(data-count-minus='')
       .counter__icon 
         |-
-    .counter__number 
-      |150
+    input(type="number" value="150").counter__number 
     .counter__item.counter__item--plus(data-count-plus='')
       .counter__icon 
         |+
