--- a/src/views/pages/instruments-card.pug
+++ b/src/views/pages/instruments-card.pug
@@ -58,7 +58,7 @@ block content
                       |€ 17.79
                       span.tooltip__span
                         .tooltip__icon 
-                          +tooltip-svg
+                          +tooltip-svg.tooltip__svg
                     .tooltip__container   
                       |Цена с НДС по курсу ЦБ на 25.06.2021
                   .instruments-card__price-old 
