--- a/src/assets/styles/helpers/helpers.scss
+++ b/src/assets/styles/helpers/helpers.scss
@@ -46,6 +46,7 @@ $color-black: #121212;
 $color-white: #fff;
 $color-darken-white: #F6F6F6;
 $color-blue: #2447ED;
+$color-darken-blue: #0124CB;
 $color-light-blue: #CAFDFA;
 $color-gray: #838383;
 $color-light-gray: #E0E0E0;
