--- a/src/views/components/header.pug
+++ b/src/views/components/header.pug
@@ -60,12 +60,12 @@ mixin header
             .header__links 
               a.header__cart(href="#") 
                 .header__cart-icon 
-                  +cart-svg
+                  +cart-svg.header__cart-svg
                 .header__cart-count 
                   |5
               .header__user(data-fancy-button='1')
                 .header__user-icon
-                  +user-svg
+                  +user-svg.header__user-svg
                 .header__user-links 
                   .header__user-container
                     .header__user-top
