--- a/src/views/components/product-card.pug
+++ b/src/views/components/product-card.pug
@@ -44,7 +44,7 @@ mixin product-card
       .product-card__bot 
         .product-card__count 
           +counter
-        .product-card__button 
+        a.product-card__button(href="#")
           +cart-svg.product-card__svg
           .product-card__button-text 
             |В корзину
