--- a/src/views/pages/cart.pug
+++ b/src/views/pages/cart.pug
@@ -74,7 +74,7 @@ block content
                           |€ 1279.2
                     .cart-page__item-col
                       .cart-page__item-icon 
-                        +trash-svg
+                        +trash-svg.cart-page__item-svg
           .cart-page__col 
             .cart-page__card 
               .cart-page__card-top
