--- a/src/views/pages/search.pug
+++ b/src/views/pages/search.pug
@@ -27,7 +27,7 @@ block content
                 each item in data.searchAside
                   .aside__card
                     .aside__container 
-                      .aside__title 
+                      h5.aside__title.aside__title--hover
                         |#{item.title} 
                         span.aside__count 
                           |#{item.count}
