--- a/src/assets/styles/modules/docs-card.scss
+++ b/src/assets/styles/modules/docs-card.scss
@@ -3,6 +3,11 @@
   background: $color-white;
   border-radius: 4px;
   border: 1px solid $color-light-gray;
+  transition: $transition;
+
+  &:hover {
+    border-color: $color-blue;
+  }
 
   &__container {
     padding: 20px;
