--- a/src/assets/styles/modules/equip-card.scss
+++ b/src/assets/styles/modules/equip-card.scss
@@ -13,6 +13,18 @@
     background: transparent;
   }
 
+  &:hover {
+    #{$comp}__title {
+      color: $color-blue;
+    }
+
+    .arrow-icon__svg {
+      path {
+        stroke: $color-blue;
+      }
+    }
+  }
+
   &--md {
     #{$comp}__title {
       margin-bottom: 12px;
@@ -65,6 +77,7 @@
       @include fsl(16px, 120%);
     }
     font-weight: 500;
+    transition: $transition;
   }
 
   &__text {
