--- a/src/assets/styles/modules/service-card.scss
+++ b/src/assets/styles/modules/service-card.scss
@@ -1,4 +1,6 @@
 .service-card {
+  $comp: &;
+
   position: relative;
   z-index: 0;
 
@@ -13,6 +15,21 @@
 
   border: 1px solid $color-light-gray;
   border-radius: 4px;
+  transition: $transition;
+
+  &:hover {
+    border-color: $color-blue;
+
+    #{$comp}__title {
+      color: $color-blue;
+    }
+
+    #{$comp}__svg {
+      path {
+        stroke: $color-blue;
+      }
+    }
+  }
 
   &__container {
     padding: 20px;
@@ -31,6 +48,7 @@
     @media (max-width: ($breakpoint - 1px)) {
       @include fsl(14px, 120%);
     }
+    transition: $transition;
   }
 
   &__image {
@@ -64,6 +82,7 @@
       height: 14px;
     }
     path {
+      transition: $transition;
       stroke: $color-black;
     }
   }
