--- a/src/assets/styles/pages/equip-detail.scss
+++ b/src/assets/styles/pages/equip-detail.scss
@@ -1,14 +1,35 @@
 .equip-detail {
 
   &__inner {
-    margin-bottom: 50px;
+    margin-bottom: 80px;
     @media (max-width: ($breakpoint - 1px)) {
-      // margin-bottom: 0;
+      margin-bottom: 40px;
+    }
+  }
+
+  &__row {
+    display: flex;
+  }
+  
+  &__col {
+    &:nth-child(1) {
+      flex-shrink: 0;
+      width: calc(#{$col-part-d} * 6 - #{$col-gap-d});
+      @media (max-width: ($breakpoint - 1px)) {
+        width: 100%;
+      }
+    }
+    &:nth-child(2) {
+      margin-left: 80px;
+      @media (max-width: ($breakpoint - 1px)) {
+        margin-left: 0;
+        margin-top: 40px;
+      }
     }
   }
 
   &__image {
-    margin-top: 79px;
+    margin-top: 20px;
     @media (max-width: ($breakpoint - 1px)) {
       margin-top: 0;
     }
