--- a/src/assets/styles/pages/main-page.scss
+++ b/src/assets/styles/pages/main-page.scss
@@ -90,7 +90,9 @@
     border-radius: 4px;
   }
   &__media-svg {
-    width: 13px;
+    @media (max-width: ($breakpoint - 1px)) {
+      width: 13px;
+    }
   }
   &__media-content {
     margin-top: 16px;
@@ -296,6 +298,18 @@
 
     background: $color-white;
     border-radius: 4px;
+
+    &:hover {
+      #{$comp}__discont-title {
+        color: $color-blue;
+      }
+
+      .arrow-icon__svg {
+        path {
+          stroke: $color-blue;
+        }
+      }
+    }
   }
   &__discont-container {
     padding: 20px;
@@ -312,6 +326,7 @@
     @media (max-width: ($breakpoint - 1px)) {
       margin-bottom: 8px;
     }
+    transition: $transition;
   }
   &__discont-text {
     @include fsl(14px, 140%);
@@ -331,6 +346,18 @@
     border-radius: 4px;
     overflow: hidden;
     background: $color-white;
+
+    &:hover {
+      #{$comp}__link-title {
+        color: $color-blue;
+      }
+
+      .arrow-icon__svg {
+        path {
+          stroke: $color-blue;
+        }
+      }
+    }
   }
   &__link-col {
     flex-shrink: 0;
@@ -365,6 +392,7 @@
       @include fsl(20px, 120%);
     }
     font-weight: 500;
+    transition: $transition;
   }
   &__link-text {
     @media (min-width: $breakpoint) {
