--- a/src/assets/styles/pages/search-page.scss
+++ b/src/assets/styles/pages/search-page.scss
@@ -35,6 +35,11 @@
     }
     border-radius: 4px;
     border: 1px solid $color-light-gray;
+    transition: $transition;
+
+    &:focus {
+      border-color: $color-blue;
+    }
   }
 
   &__aside {
