--- a/src/views/components/aside.pug
+++ b/src/views/components/aside.pug
@@ -3,7 +3,7 @@ mixin aside
     - for (j = 0; j < 3; j++)
       .aside__card
         .aside__container 
-          .aside__title 
+          h5.aside__title 
             |Материал детали
           ul.aside__list.aside__inner
             - for (i = 0; i < 3; i++)
@@ -25,7 +25,7 @@ mixin aside
       - for (x = 0; x < 2; x++)
         .aside__card(data-range-block='')
           .aside__container 
-            .aside__title 
+            h5.aside__title 
               |Материал детали
             .range.aside__inner
               .range__top 
@@ -44,6 +44,6 @@ mixin aside
     if (attributes.clear)
       .aside__btn(data-clear-button='')
         .aside__icon 
-          +trash-svg 
+          +trash-svg.aside__svg
         .aside__btn-text 
           |Очистить выбранное
