--- a/src/views/pages/equip-card.pug
+++ b/src/views/pages/equip-card.pug
@@ -12,34 +12,32 @@ block content
   .instruments-card.equip-detail
     section.instruments-card__section
       .container
-        .instruments-card__section-row.equip-detail__inner
-          .instruments-card__section-col
-            .instruments-card__section-breadcrumbs 
-              ul.breadcrumbs 
-                each item in ['Главная', 'Оборудование', 'Токарные станки с ЧПУ']
-                  li.breadcrumbs__item 
-                    a.breadcrumbs__link(href="#") 
-                      |#{item}
-                li.breadcrumbs__item 
-                  .breadcrumbs__text 
-                    |Токарно-карусельный станок Leadwell VTL-1000 ATC
-            .equip-detail__image
-              img.instruments-card__section-img(src="assets/images/equip-detail.jpg", alt="")
-          .instruments-card__section-col
+        ul.breadcrumbs 
+          each item in ['Главная', 'Оборудование', 'Токарные станки с ЧПУ']
+            li.breadcrumbs__item 
+              a.breadcrumbs__link(href="#") 
+                |#{item}
+          li.breadcrumbs__item 
+            .breadcrumbs__text 
+              |Токарно-карусельный станок Leadwell VTL-1000 ATC
+        .equip-detail__row.equip-detail__inner
+          .equip-detail__col
             .instruments-card__section-info
               h1.instruments-card__section-title 
                 |Токарно-карусельный станок Leadwell VTL-1000 ATC
               p.instruments-card__section-text 
                 |Служит для обработки деталей типа диск и колесо среднего и крупного размера. Вертикальная компоновка станка облегчает загрузку/выгрузку заготовок. Большие модели оснащены в базовом исполнении редуктором.
-              .instruments-card__section-inner.margin-top.margin-top--md 
-                .instruments-card__section-item 
-                  .instruments-card__section-label 
-                    |Производитель
-                  .instruments-card__section-text 
-                    |Leadwell
-                .instruments-card__section-item 
-                  +button.button--small.button--outline.button--lg.button--white
-                    |Возможные опции
+            .equip-detail__image
+              img.instruments-card__section-img(src="assets/images/equip-detail.jpg", alt="")
+            .instruments-card__section-inner.margin-top.margin-top--md 
+              .instruments-card__section-item 
+                .instruments-card__section-label 
+                  |Производитель
+                .instruments-card__section-text 
+                  |Leadwell
+              .instruments-card__section-item 
+                +button.button--small.button--outline.button--lg.button--white
+                  |Возможные опции
             .equip-detail__panel 
               .equip-detail__panel-row 
                 .equip-detail__panel-col
@@ -48,7 +46,21 @@ block content
                 .equip-detail__panel-col
                   +button
                     |Оставить заявку
-    section.instruments-card__block 
+          .equip-detail__col
+            h2.instruments-card__inner
+              |Характеристики
+            - for (x = 0; x < 4; x++)
+              .equip-detail__block(class=(x === 0 ? "" : 'margin-top'))
+                h4.equip-detail__title 
+                  |Рабочий диапазон
+                ul.equip-detail__list 
+                  - for (i = 0; i < 4; i++)
+                    li.equip-detail__list-item 
+                      .equip-detail__list-text.small 
+                        |Перемещение по оси X, мм
+                      .equip-detail__list-text 
+                        |300
+    //- section.instruments-card__block 
       .container 
         h2.instruments-card__inner
           |Характеристики
