--- a/src/assets/styles/modules/button.scss
+++ b/src/assets/styles/modules/button.scss
@@ -39,20 +39,33 @@
   &--small {
     padding: 8px 0;
     width: 160px;
+    @media (max-width: ($breakpoint - 1px)) {
+      // padding: 10px 0;
+      width: 100%;
+    }
     @include fsl(14px, 140%);
   }
 
   &--white {
     background: $color-white;
     color: $color-black;
+
+    &:hover {
+      color: $color-white;
+      background: $color-blue;
+      border-color: $color-blue;
+    }
   }
 
   &--lg {
     padding: 14px 0;
+    @media (max-width: ($breakpoint - 1px)) {
+      padding: 10px 0;
+    }
   }
 
   &--outline {
-    border: 1px solid $color-light-gray
+    border: 1px solid $color-light-gray;
   }
 
   &--error {
