--- a/src/assets/styles/pages/instruments-page.scss
+++ b/src/assets/styles/pages/instruments-page.scss
@@ -31,6 +31,10 @@
       transition: $transition;
     }
 
+    &:hover::before  {
+      background: $color-blue;
+    }
+
     &.active {
 
       &::before {
